<resources>
    <string name="app_name">Disobey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tryOn">Disobey 3D Sneaker Try On</string>
    <string name="title_capture_with">Capture with:</string>
    <string name="title_play_with">Play with:</string>
    <!--    <string name="label_multiple_lenses">Multiple lenses</string>-->
    <!--    <string name="label_multiple_lenses_wo_control_strip">Multiple lenses w/o control strip</string>-->
    <!--    <string name="label_multiple_lenses_apply_by_id">Multiple lenses &amp; apply by ID</string>-->
    <!--    <string name="label_multiple_lenses_prefetch_all">Multiple lenses &amp; prefetch all</string>-->
    <!--    <string name="label_multiple_lenses_idle_state">Multiple lenses with idle state</string>-->
    <!--    <string name="label_multiple_lenses_camera_facing_back">Multiple lenses &amp; back camera</string>-->
    <string name="label_lens">Retake</string>
    <!--    <string name="label_lens_wo_control_strip">Single lens w/o control strip</string>-->
    <!--    <string name="label_lens_no_icon">Single lens with no icon</string>-->
    <string name="label_result_none">No result</string>
    <string name="label_result_completed">Completed</string>
    <string name="label_result_failure">CameraActivity failed due to:\n%s</string>
    <string name="description_captured_video_preview">Captured video preview</string>
    <string name="description_captured_image_preview">Captured image preview</string>
    <string name="preference_file_key">disobey_steps</string>
    <string name="title_activity_base">Base</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="button_description">Avatar Customization</string>

    <string name="Scroll_description">Avatar Customization</string>
    <string name="ButtonName">Shorts Olive</string>
</resources>